# zer0inf

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-RESULTS.md  HACKATHON-SUBMISSION-CHECKLIST.md  PLAN.md  README.md  REVIEW-PLAN.md  package-lock.json  package.json  tsconfig.json
circuit/: Nargo.toml  Prover.toml
circuit/src/: main.nr  main.nr.bak
contract/: Cargo.toml
contract/src/: lib.rs
contract/tests/: integration.rs
data/: borrower.approved.json  borrower.denied.json  borrower.junior.json  borrower.marginal.json  borrower.rejected.json  borrower.restructured.json  borrower.secured.json  sample-inference-deny.json  sample-inference.json  sample-weights.json
implement-plans/: P0-P1-improvements.md
output/: contract-id.txt  model.json  proof.json
prover/: package.json  tsconfig.json  vitest.config.ts
prover/src/__tests__/: types.test.ts
prover/src/cli/: index.d.ts  index.js  index.ts  utils.ts
prover/src/cli/commands/: deploy.ts  export-vk.ts  help.ts  infer.ts  register.ts  status.ts  submit.ts  verify.ts
prover/src/client/: README.md  package.json
prover/src/client/src/: client.ts  types.ts
prover/src/onchain/: index.d.ts  index.js  index.ts
prover/src/proof/: generate.d.ts  generate.js  generate.ts
prover/src/types/: index.d.ts  index.js  index.ts
scripts/: deploy-and-test.sh
